--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "private": true,
   "name": "swashbuckler",
+  "scripts": {
+    "bootstrap": "lerna bootstrap",
+    "build": "lerna exec --parallel 'BABEL_ENV=build babel src --out-dir build --source-maps --extensions .js --config-file ../../babel.config.js --delete-dir-on-start --no-comments'",
+    "lint": "lerna run lint",
+    "ls": "lerna ls",
+    "test": "lerna run test --since",
+    "bump": "lerna version --conventional-commits --yes",
+    "publish": "lerna publish",
+    "diff": "lerna diff"
+  },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
     "@babel/core": "^7.7.7",
     "@babel/node": "^7.7.7",
     "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
     "@babel/register": "^7.7.7",
     "babel-eslint": "^10.0.3",
     "chai": "^4.2.0",
@@ -24,5 +35,11 @@
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "npmClient": "yarn",
+  "useWorkspaces": true,
+  "dependencies": {
+    "lodash": "^4.17.15",
+    "rxjs": "^6.5.4"
+  }
 }
