--- a/packages/rxws/package.json
+++ b/packages/rxws/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "@swashbuckler/rxws",
-  "version": "0.2.0",
+  "name": "@bottlenose/rxws",
+  "version": "1.3.0",
   "description": "A simple, reliable and isomorphic WebSocket client for RxJS",
   "main": "build/index.js",
   "repository": "https://github.com/buccaneerai/swashbuckler/tree/master/packages/rxws",
   "author": "Buccaneer LLC <opensource@buccaneer.ai>",
   "license": "MIT",
   "private": false,
+  "type": "module",
+  "bugs": {
+    "url": "https://github.com/buccaneerai/swashbuckler/issues"
+  },
   "keywords": [
     "rxjs",
     "rxws",
@@ -22,25 +26,21 @@
   "files": [
     "build/*"
   ],
-  "bugs": {
-    "url": "https://github.com/buccaneerai/swashbuckler/issues"
-  },
-  "devDependencies": {
-    "express": "^4.17.1",
+  "dependencies": {
+    "isomorphic-ws": "^4.0.1",
     "lodash": "^4.17.15",
     "rxjs": "^6.5.4",
     "ws": "^7.2.1"
   },
-  "dependencies": {
-    "isomorphic-ws": "^4.0.1",
-    "lodash": "^4.17.15",
-    "rxjs": "^6.5.4"
+  "devDependencies": {
+    "express": "^4.17.1"
   },
   "scripts": {
+    "build": "rm -rf ./build/* && babel ./src -d ./build --ignore *.test.js",
     "lint": "eslint -c ../../.eslintrc ./src",
-    "prepublishOnly": "yarn lint && yarn test && yarn build",
-    "test": "mocha --require @babel/register --require @babel/polyfill ./src/*.test.js ./src/**/*.test.js --exit --require source-map-support",
+    "test": "mocha --exit ./src/**/*.test.js ./src/*.test.js",
     "test:watch": "yarn test -- --watch",
+    "prepublishOnly": "yarn lint && yarn test && yarn build",
     "server:start": "babel-node ./scripts/startServer.js",
     "server:connect": "babel-node ./scripts/testWebSocket.js"
   }
