--- a/packages/rxstats/package.json
+++ b/packages/rxstats/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@bottlenose/rxstats",
   "version": "1.3.0",
+  "description": "Descriptive statistics for RxJS",
   "main": "build/index.js",
-  "description": "The statistical toolkit for RxJS",
-  "repository": "https://github.com/buccaneerai/swashbuckler/tree/master/packages/rxstats",
+  "repository": "https://github.com/buccaneerai/bottlenose/tree/master/packages/rxstats",
   "author": "Buccaneer LLC <opensource@buccaneer.ai>",
   "license": "MIT",
   "private": false,
   "type": "module",
   "bugs": {
-    "url": "https://github.com/buccaneerai/rxjs-stats/issues"
+    "url": "https://github.com/buccaneerai/bottlenose/issues"
   },
   "keywords": [
     "statistics",
@@ -36,6 +36,7 @@
   "scripts": {
     "build": "rm -rf ./build/* && babel ./src -d ./build --ignore *.test.js",
     "lint": "eslint -c ../../.eslintrc ./src",
+    "test": "mocha --exit ./src/**/*.test.js ./src/*.test.js",
     "test:watch": "yarn test -- --watch"
   }
 }
