--- a/packages/rxws/package.json
+++ b/packages/rxws/package.json
@@ -3,13 +3,13 @@
   "version": "1.3.0",
   "description": "A simple, reliable and isomorphic WebSocket client for RxJS",
   "main": "build/index.js",
-  "repository": "https://github.com/buccaneerai/swashbuckler/tree/master/packages/rxws",
+  "repository": "https://github.com/buccaneerai/bottlenose/tree/master/packages/rxws",
   "author": "Buccaneer LLC <opensource@buccaneer.ai>",
   "license": "MIT",
   "private": false,
   "type": "module",
   "bugs": {
-    "url": "https://github.com/buccaneerai/swashbuckler/issues"
+    "url": "https://github.com/buccaneerai/bottlenose/issues"
   },
   "keywords": [
     "rxjs",
@@ -41,7 +41,7 @@
     "test": "mocha --exit ./src/**/*.test.js ./src/*.test.js",
     "test:watch": "yarn test -- --watch",
     "prepublishOnly": "yarn lint && yarn test && yarn build",
-    "server:start": "babel-node ./scripts/startServer.js",
-    "server:connect": "babel-node ./scripts/testWebSocket.js"
+    "server:start": "babel-node --config-file ../../babel.config.js ./scripts/startServer.js",
+    "server:connect": "babel-node --config-file ../../babel.config.js ./scripts/testWebSocket.js"
   }
 }
