docs: more documentation improvements

--- a/packages/rxstats/package.json
+++ b/packages/rxstats/package.json
@@ -17,7 +17,7 @@
     "data science",
     "stats",
     "rxjs",
-    "rxjs-stats",
+    "rxstats",
     "observables",
     "stream",
     "streaming",
