--- a/packages/rxtranscribe/package.json
+++ b/packages/rxtranscribe/package.json
@@ -38,9 +38,11 @@
     "qs": "^6.9.1",
     "rxjs": "^6.5.4"
   },
+  "browserslist": [],
   "scripts": {
     "build": "rm -rf ./build/* && babel ./src -d ./build --ignore *.test.js",
     "lint": "eslint -c ../../.eslintrc ./src",
+    "test": "mocha --exit ./src/**/*.test.js ./src/*.test.js",
     "test:watch": "yarn test -- --watch",
     "prepublishOnly": "yarn lint && yarn test && yarn build"
   }
