chore: update to package description

--- a/packages/rxtranscribe/package.json
+++ b/packages/rxtranscribe/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bottlenose/rxtranscribe",
   "version": "0.1.0",
-  "description": "Convert speech-to-text (S2T) in realtime with AWS Transcribe and RxJS",
+  "description": "👂 Realtime speech-to-text (S2T) transcription with AWS Transcribe and RxJS",
   "main": "build/index.js",
   "repository": "https://github.com/buccaneerai/bottlenose/tree/master/packages/rxtranscribe",
   "author": "Buccaneer LLC <opensource@buccaneer.ai>",
