--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -27,5 +27,31 @@
   },
   "bugs": {
     "url": "https://github.com/buccaneerai/bottlenose/issues"
+  },
+  "dependencies": {
+    "copy-to-clipboard": "^3.2.0",
+    "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-codemirror": "^1.0.0",
+    "react-dom": "^16.12.0",
+    "react-markdown": "^4.3.1",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "reactstrap": "^8.3.2",
+    "redux": "^4.0.5",
+    "redux-observable": "^1.2.0",
+    "rxjs": "^6.5.4",
+    "victory": "^34.0.0"
+  },
+  "devDependencies": {
+    "node-sass": "^4.13.1",
+    "react-dom": "^16.12.0",
+    "react-scripts": "^3.3.0",
+    "storybook": "^5.3.6"
   }
 }
