--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 # builds
 packages/**/build
 
+# testing
+/coverage
+
 # config
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 prod.env
 dev.env
 
@@ -43,6 +50,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+/.pnp
+.pnp.js
 
 # Typescript v1 declaration files
 typings/
