--- a/packages/notebook/package.json
+++ b/packages/notebook/package.json
@@ -23,7 +23,26 @@
     "url": "git+https://github.com/buccaneerai/bottlenose.git"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "storybook": "start-storybook"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "bugs": {
     "url": "https://github.com/buccaneerai/bottlenose/issues"
@@ -49,6 +68,7 @@
     "victory": "^34.0.0"
   },
   "devDependencies": {
+    "@storybook/react": "^5.3.6",
     "node-sass": "^4.13.1",
     "react-dom": "^16.12.0",
     "react-scripts": "^3.3.0",
