rxsgd: cleaned up code and added predict method

--- a/packages/rxsgd/package.json
+++ b/packages/rxsgd/package.json
@@ -13,7 +13,7 @@
     "classifier",
     "stochastic gradient descent"
   ],
-  "author": "Brian <brianflaherty64@gmail.com>",
+  "author": "Buccaneer LLC <opensource@buccaneer.ai>",
   "homepage": "https://github.com/buccaneerai/bottlenose#readme",
   "license": "MIT",
   "main": "src/index.js",
