fix: added prepare script to packages

--- a/packages/rxnlp/package.json
+++ b/packages/rxnlp/package.json
@@ -37,7 +37,8 @@
     "build": "rm -rf ./build/* && babel ./src -d ./build --ignore *.test.js",
     "lint": "eslint -c ../../.eslintrc ./src",
     "test": "mocha --exit ./src/**/*.test.js ./src/*.test.js",
-    "test:watch": "yarn test -- --watch"
+    "test:watch": "yarn test -- --watch",
+    "prepare": "yarn lint && yarn test && yarn build"
   },
   "bugs": {
     "url": "https://github.com/buccaneerai/bottlenose/issues"
