--- a/packages/rxws/package.json
+++ b/packages/rxws/package.json
@@ -7,7 +7,6 @@
   "author": "Buccaneer LLC <opensource@buccaneer.ai>",
   "license": "MIT",
   "private": false,
-  "type": "module",
   "bugs": {
     "url": "https://github.com/buccaneerai/bottlenose/issues"
   },
@@ -45,7 +44,7 @@
     "lint": "eslint -c ../../.eslintrc ./src",
     "test": "mocha --exit ./src/**/*.test.js ./src/*.test.js",
     "test:watch": "yarn test -- --watch",
-    "prepublishOnly": "yarn lint && yarn test && yarn build",
+    "prepare": "yarn lint && yarn test && yarn build",
     "server:start": "node --experimental-modules ./scripts/startServer.mjs",
     "server:connect": "node --experimental-modules ./scripts/testWebSocket.mjs"
   }
