--- a/packages/rxs3/package.json
+++ b/packages/rxs3/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bottlenose/rxs3",
   "version": "0.2.0",
-  "description": "Stream files to and from s3 with RxJS",
+  "description": "☁️ Stream files to and from AWS S3 with RxJS",
   "main": "build/index.js",
   "author": "Buccaneer LLC <opensource@buccaneer.ai>",
   "homepage": "https://github.com/buccaneerai/bottlenose#readme",
@@ -30,9 +30,6 @@
   "files": [
     "build/*"
   ],
-  "publishConfig": {
-    "registry": "https://registry.yarnpkg.com"
-  },
   "scripts": {
     "build": "rm -rf ./build/* && babel ./src -d ./build --ignore *.test.js",
     "lint": "eslint -c ../../.eslintrc ./src",
@@ -44,5 +41,6 @@
     "aws-sdk": "^2.604.0",
     "lodash": "^4.17.15",
     "rxjs": "^6.5.4"
-  }
+  },
+  "gitHead": "b2a0edac1d5927d6b5535160778f891a1d7a91c8"
 }
