--- a/packages/rxsgd/package.json
+++ b/packages/rxsgd/package.json
@@ -36,5 +36,6 @@
   },
   "bugs": {
     "url": "https://github.com/buccaneerai/bottlenose/issues"
-  }
+  },
+  "gitHead": "b2a0edac1d5927d6b5535160778f891a1d7a91c8"
 }
