--- a/packages/rxfs/package.json
+++ b/packages/rxfs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bottlenose/rxfs",
   "version": "0.2.0",
-  "description": "Stream file data to and from local file system with RxJS",
+  "description": "💾 Stream file data to and from local file system with RxJS",
   "keywords": [
     "rxjs",
     "bottlenose",
@@ -13,6 +13,7 @@
   "author": "Buccaneer LLC <opensource@buccaneer.ai>",
   "homepage": "https://github.com/buccaneerai/bottlenose#readme",
   "license": "MIT",
+  "private": false,
   "main": "src/index.js",
   "directories": {
     "src": "src"
@@ -37,5 +38,6 @@
   "dependencies": {
     "lodash": "^4.17.15",
     "rxjs": "^6.5.4"
-  }
+  },
+  "gitHead": "b2a0edac1d5927d6b5535160778f891a1d7a91c8"
 }
