--- a/packages/rxnlp/package.json
+++ b/packages/rxnlp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bottlenose/rxnlp",
   "version": "0.2.0",
-  "description": "NLP (natural language processing) operators for RxJS",
+  "description": "💬 NLP (natural language processing) operators for RxJS",
   "keywords": [
     "nlp",
     "natural language processing",
@@ -19,6 +19,7 @@
   "author": "Buccaneer LLC <opensource@buccaneer.ai>",
   "homepage": "https://github.com/buccaneerai/bottlenose#readme",
   "license": "MIT",
+  "private": false,
   "main": "src/index.js",
   "directories": {
     "src": "src"
@@ -26,9 +27,6 @@
   "files": [
     "build"
   ],
-  "publishConfig": {
-    "registry": "https://registry.yarnpkg.com"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/buccaneerai/bottlenose.git"
@@ -47,5 +45,6 @@
     "lodash": "^4.17.15",
     "natural": "^0.6.3",
     "rxjs": "^6.5.4"
-  }
+  },
+  "gitHead": "b2a0edac1d5927d6b5535160778f891a1d7a91c8"
 }
