--- a/packages/rxsgd/package.json
+++ b/packages/rxsgd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxsgd",
-  "version": "0.2.0",
+  "version": "0.2.1-beta.0+9216c0f",
   "description": "SGD classifier for RxJS",
   "keywords": [
     "sgd classifier",
@@ -37,5 +37,5 @@
   "bugs": {
     "url": "https://github.com/buccaneerai/bottlenose/issues"
   },
-  "gitHead": "b2a0edac1d5927d6b5535160778f891a1d7a91c8"
+  "gitHead": "9216c0f2309f24f1563f5b1d4648f90f7d1f84f7"
 }
