--- a/packages/rxstats/package.json
+++ b/packages/rxstats/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxstats",
-  "version": "0.2.0",
+  "version": "0.2.1-beta.0+9216c0f",
   "description": "🔬 Descriptive statistics for RxJS",
   "main": "build/index.js",
   "repository": "https://github.com/buccaneerai/bottlenose/tree/master/packages/rxstats",
@@ -39,5 +39,5 @@
     "test:watch": "yarn test -- --watch",
     "prepare": "yarn lint && yarn test && yarn build"
   },
-  "gitHead": "b2a0edac1d5927d6b5535160778f891a1d7a91c8"
+  "gitHead": "9216c0f2309f24f1563f5b1d4648f90f7d1f84f7"
 }
