--- a/packages/rxws/package.json
+++ b/packages/rxws/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxws",
-  "version": "0.2.0",
+  "version": "0.2.1-beta.0+9216c0f",
   "description": "🔌 A simple, reliable and isomorphic WebSocket client for RxJS",
   "main": "build/index.js",
   "repository": "https://github.com/buccaneerai/bottlenose/tree/master/packages/rxws",
@@ -48,5 +48,5 @@
     "server:start": "node --experimental-modules ./scripts/startServer.mjs",
     "server:connect": "node --experimental-modules ./scripts/testWebSocket.mjs"
   },
-  "gitHead": "b2a0edac1d5927d6b5535160778f891a1d7a91c8"
+  "gitHead": "9216c0f2309f24f1563f5b1d4648f90f7d1f84f7"
 }
