--- a/packages/rxsgd/package.json
+++ b/packages/rxsgd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxsgd",
-  "version": "0.2.1-beta.1+d9241fd",
+  "version": "0.2.1-beta.2+2e605ea",
   "description": "♾️ SGD (stochastic gradient descent) linear classifier for RxJS",
   "keywords": [
     "rxjs",
@@ -32,6 +32,9 @@
     "type": "git",
     "url": "git+https://github.com/buccaneerai/bottlenose.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "rm -rf ./build/* && babel ./src -d ./build --ignore *.test.js",
     "lint": "eslint -c ../../.eslintrc ./src",
@@ -42,5 +45,5 @@
   "bugs": {
     "url": "https://github.com/buccaneerai/bottlenose/issues"
   },
-  "gitHead": "d9241fdec2eadd5a5a120d57e3c3565dad292764"
+  "gitHead": "2e605ea39f6ec0994985bdd3a63398c3b9946553"
 }
