--- a/packages/rxtranscribe/package.json
+++ b/packages/rxtranscribe/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@bottlenose/rxtranscribe",
-  "version": "0.2.1-beta.1+d9241fd",
+  "version": "0.2.1-beta.2+2e605ea",
   "description": "👂 Realtime speech-to-text (S2T) transcription with AWS Transcribe and RxJS",
   "main": "build/index.js",
   "repository": "https://github.com/buccaneerai/bottlenose/tree/master/packages/rxtranscribe",
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Buccaneer LLC <opensource@buccaneer.ai>",
   "license": "MIT",
   "private": false,
@@ -33,7 +36,7 @@
   "dependencies": {
     "@aws-sdk/eventstream-marshaller": "^0.1.0-preview.2",
     "@aws-sdk/util-utf8-node": "^0.1.0-preview.1",
-    "@bottlenose/rxws": "^0.2.1-beta.1+d9241fd",
+    "@bottlenose/rxws": "^0.2.1-beta.2+2e605ea",
     "lodash": "^4.17.15",
     "qs": "^6.9.1",
     "rxjs": "^6.5.4"
@@ -46,5 +49,5 @@
     "test:watch": "yarn test -- --watch",
     "prepublishOnly": "yarn lint && yarn test && yarn build"
   },
-  "gitHead": "d9241fdec2eadd5a5a120d57e3c3565dad292764"
+  "gitHead": "2e605ea39f6ec0994985bdd3a63398c3b9946553"
 }
