--- a/packages/rxfs/package.json
+++ b/packages/rxfs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxfs",
-  "version": "0.2.1-beta.1+d9241fd",
+  "version": "0.2.1-beta.2+2e605ea",
   "description": "💾 Stream file data to and from local file system with RxJS",
   "keywords": [
     "rxjs",
@@ -25,6 +25,9 @@
     "type": "git",
     "url": "git+https://github.com/buccaneerai/bottlenose.git"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "rm -rf ./build/* && babel ./src -d ./build --ignore *.test.js",
     "lint": "eslint -c ../../.eslintrc ./src",
@@ -39,5 +42,5 @@
     "lodash": "^4.17.15",
     "rxjs": "^6.5.4"
   },
-  "gitHead": "d9241fdec2eadd5a5a120d57e3c3565dad292764"
+  "gitHead": "2e605ea39f6ec0994985bdd3a63398c3b9946553"
 }
