--- a/packages/rxws/package.json
+++ b/packages/rxws/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@bottlenose/rxws",
-  "version": "0.2.1-beta.1+d9241fd",
+  "version": "0.2.1-beta.2+2e605ea",
   "description": "🔌 A simple, reliable and isomorphic WebSocket client for RxJS",
   "main": "build/index.js",
   "repository": "https://github.com/buccaneerai/bottlenose/tree/master/packages/rxws",
+  "publishConfig": {
+    "access": "public"
+  },
   "author": "Buccaneer LLC <opensource@buccaneer.ai>",
   "license": "MIT",
   "private": false,
@@ -48,5 +51,5 @@
     "server:start": "node --experimental-modules ./scripts/startServer.mjs",
     "server:connect": "node --experimental-modules ./scripts/testWebSocket.mjs"
   },
-  "gitHead": "d9241fdec2eadd5a5a120d57e3c3565dad292764"
+  "gitHead": "2e605ea39f6ec0994985bdd3a63398c3b9946553"
 }
