fix: rxnlp now has build index.js as entrypoint rather than src

--- a/packages/rxnlp/package.json
+++ b/packages/rxnlp/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/buccaneerai/bottlenose#readme",
   "license": "MIT",
   "private": false,
-  "main": "src/index.js",
+  "main": "build/index.js",
   "directories": {
     "src": "src"
   },
