--- a/packages/rxtranscribe/package.json
+++ b/packages/rxtranscribe/package.json
@@ -42,7 +42,9 @@
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
-    "@bottlenose/rxfs": "^0.1.0"
+    "@bottlenose/rxfs": "^0.2.1-beta.2+2e605ea",
+    "optimist": "^0.6.1",
+    "prompt": "^1.0.0"
   },
   "browserslist": [],
   "scripts": {
@@ -50,7 +52,8 @@
     "lint": "eslint -c ../../.eslintrc ./src",
     "test": "mocha --exit ./src/**/*.test.js ./src/*.test.js",
     "test:watch": "yarn test -- --watch",
-    "prepublishOnly": "yarn lint && yarn test && yarn build"
+    "prepublishOnly": "yarn lint && yarn test && yarn build",
+    "demo:run": "BABEL_ENV=script yarn babel-node --config-file ../../babel.config.js ./demo/runDemo.js"
   },
   "gitHead": "2e605ea39f6ec0994985bdd3a63398c3b9946553"
 }
