chore: lerna lint command now colorizes output

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna exec --parallel 'BABEL_ENV=build babel src --out-dir build --source-maps --extensions .js --config-file ../../babel.config.js --delete-dir-on-start --no-comments'",
-    "lint": "lerna run lint",
+    "lint": "lerna exec yarn lint",
     "ls": "lerna ls",
     "test": "lerna run test --since",
     "bump:major": "lerna version major --yes",
