--- a/packages/rxsocketio/package.json
+++ b/packages/rxsocketio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxsocketio",
-  "version": "0.4.0",
+  "version": "0.5",
   "description": "RxJS operators for handling socket.io connections",
   "keywords": [
     "rxjs",
@@ -41,5 +41,6 @@
   },
   "devDependencies": {
     "socket.io": "^2.3.0"
-  }
+  },
+  "gitHead": "63a1f5d94ce7a143a41252f91a5abd742536602e"
 }
