--- a/packages/rxsocketio/package.json
+++ b/packages/rxsocketio/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxsocketio",
-  "version": "0.2.1-beta.2+2e605ea",
+  "version": "null-alpha.206+2f36fb5",
   "description": "RxJS operators for handling socket.io connections",
   "keywords": [
     "rxjs",
@@ -42,5 +42,5 @@
   "devDependencies": {
     "socket.io": "^2.3.0"
   },
-  "gitHead": "7c20c748ff213db732aee816c730e8ae427aef08"
+  "gitHead": "2f36fb5399ae1e621b0ec12d9c93571ce39cd7a6"
 }
