--- a/packages/rxfs/package.json
+++ b/packages/rxfs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxfs",
-  "version": "0.2.1-beta.2+2e605ea",
+  "version": "0.6.0",
   "description": "💾 Stream file data to and from local file system with RxJS",
   "keywords": [
     "rxjs",
