--- a/packages/rxnlp/package.json
+++ b/packages/rxnlp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxnlp",
-  "version": "0.2.1-beta.2+2e605ea",
+  "version": "0.6.0",
   "description": "💬 NLP (natural language processing) operators for RxJS",
   "keywords": [
     "nlp",
