--- a/packages/rxsgd/package.json
+++ b/packages/rxsgd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxsgd",
-  "version": "0.2.1-beta.2+2e605ea",
+  "version": "0.6.0",
   "description": "♾️ SGD (stochastic gradient descent) linear classifier for RxJS",
   "keywords": [
     "rxjs",
