--- a/packages/rxws/package.json
+++ b/packages/rxws/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxws",
-  "version": "0.2.1-beta.2+2e605ea",
+  "version": "0.6.0",
   "description": "🔌 A simple, reliable and isomorphic WebSocket client for RxJS",
   "main": "build/index.js",
   "repository": "https://github.com/buccaneerai/bottlenose/tree/master/packages/rxws",
