--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "bottlenose",
   "scripts": {
-    "bootstrap": "lerna bootstrap",
+    "bootstrap": "BABEL_ENV=build lerna bootstrap",
     "build": "lerna exec --parallel 'BABEL_ENV=build babel src --out-dir build --source-maps --extensions .js --config-file ../../babel.config.js --delete-dir-on-start --no-comments'",
     "package:create": "lerna create --dependencies rxjs --license MIT",
     "lint": "lerna exec yarn lint",
