--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
           command: yarn build
       - run:
           name: Security check for npm packages
-          command: yarn audit --groups dependencies
+          command: yarn audit --groups dependencies --level 8
 workflows:
   version: 2
   build_test_deploy:
