feat: GCP Raw Implementation
- Documentation Fixes
- Formatting consistent to style guide
- Added a clean script to the package.json
- Added Sample Audio Files
- GCP chunking without streaming or socket connection
*Note*: pipe(map, concatMap, map) has the effect of an indexed MergeMap or an async ConcatMap

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bump:patch": "lerna version patch --yes",
     "diff": "lerna diff",
     "release": "lerna publish",
-    "release:beta": "lerna publish --canary --preid beta"
+    "release:beta": "lerna publish --canary --preid beta",
+    "clean": "lerna clean && rm -r node_modules"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
