--- a/packages/rxtranscribe/package.json
+++ b/packages/rxtranscribe/package.json
@@ -36,6 +36,7 @@
     "@aws-sdk/eventstream-marshaller": "^0.1.0-preview.2",
     "@aws-sdk/util-utf8-node": "^0.1.0-preview.1",
     "@bottlenose/rxws": "^0.6.0",
+    "@google-cloud/speech": "^3.6.0",
     "deepspeech": "^0.6.1",
     "lodash": "^4.17.15",
     "node-vad": "^1.1.4",
