--- a/packages/rxtranscribe/package.json
+++ b/packages/rxtranscribe/package.json
@@ -40,6 +40,7 @@
     "deepspeech": "^0.6.1",
     "lodash": "^4.17.15",
     "qs": "^6.9.1",
+    "node-vad": "^1.1.4",
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
