--- a/packages/rxtranscribe/package.json
+++ b/packages/rxtranscribe/package.json
@@ -39,12 +39,13 @@
     "@google-cloud/speech": "^3.6.0",
     "deepspeech": "^0.6.1",
     "lodash": "^4.17.15",
-    "qs": "^6.9.1",
     "node-vad": "^1.1.4",
+    "qs": "^6.9.1",
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
     "@bottlenose/rxfs": "^0.6.0",
+    "moment": "^2.26.0",
     "optimist": "^0.6.1",
     "prompt": "^1.0.0"
   },
