--- a/packages/rxtranscribe/package.json
+++ b/packages/rxtranscribe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxtranscribe",
-  "version": "0.1.1-beta.38+c725fc8",
+  "version": "0.7.0",
   "description": "👂 Realtime speech-to-text (S2T) transcription with RxJS",
   "main": "build/index.js",
   "repository": "https://github.com/buccaneerai/bottlenose/tree/master/packages/rxtranscribe",
@@ -35,7 +35,7 @@
   "dependencies": {
     "@aws-sdk/eventstream-marshaller": "^0.1.0-preview.2",
     "@aws-sdk/util-utf8-node": "^0.1.0-preview.1",
-    "@bottlenose/rxws": "^0.6.0",
+    "@bottlenose/rxws": "^0.7.0",
     "@google-cloud/speech": "^3.6.0",
     "deepspeech": "0.7.4",
     "lodash": "^4.17.15",
@@ -44,7 +44,7 @@
     "rxjs": "^6.5.4"
   },
   "devDependencies": {
-    "@bottlenose/rxfs": "^0.6.0",
+    "@bottlenose/rxfs": "^0.7.0",
     "moment": "^2.26.0",
     "optimist": "^0.6.1",
     "prompt": "^1.0.0"
