chore: updated package.json commit

--- a/packages/rxtranscribe/package.json
+++ b/packages/rxtranscribe/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bottlenose/rxtranscribe",
-  "version": "0.7.0",
+  "version": "0.7.1-beta.0+013e527",
   "description": "👂 Realtime speech-to-text (S2T) transcription with RxJS",
   "main": "build/index.js",
   "repository": "https://github.com/buccaneerai/bottlenose/tree/master/packages/rxtranscribe",
@@ -58,5 +58,5 @@
     "prepublishOnly": "yarn lint && yarn test && yarn build",
     "demo:run": "yarn build && BABEL_ENV=build yarn babel-node --config-file ../../babel.config.js ./demo/runDemo.js"
   },
-  "gitHead": "c725fc85108af6b555449d033e20e5bbc9268099"
+  "gitHead": "013e5277a9622ae0f0c7a0952e1417371992d83f"
 }
