--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "diff": "lerna diff",
     "release": "lerna publish",
     "release:beta": "lerna publish --canary --preid beta",
-    "clean": "lerna clean && rm -r node_modules"
+    "clean": "lerna clean"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
