chore: update gitignore and package.json for yalc

--- a/packages/rxtranscribe/package.json
+++ b/packages/rxtranscribe/package.json
@@ -30,7 +30,8 @@
     "realtime"
   ],
   "files": [
-    "build/*"
+    "build/*",
+    ".yalc"
   ],
   "dependencies": {
     "@aws-sdk/eventstream-marshaller": "^0.1.0-preview.2",
